plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0-SNAPSHOT'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '8.2.1'
	id 'checkstyle'
	id 'jacoco'
}

group = 'com.jonjam'
version = System.getenv('APP_VERSION') ?: '0.0.1-snapshot'
description = 'Weather MCP'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
	maven { url = 'https://repo.spring.io/snapshot' }
}

dependencyManagement {
	imports {
		mavenBom 'org.springframework.ai:spring-ai-bom:1.1.2'
	}
}

dependencies {
	// Spring AI
	implementation 'org.springframework.ai:spring-ai-starter-mcp-server'
	implementation 'org.springframework.ai:spring-ai-mcp-annotations'

	// Sprintg Boot HTTP client
	implementation 'org.springframework.boot:spring-boot-starter-restclient'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// Spring Boot Actuator
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'

	// Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	
	// WireMock
	testImplementation 'org.wiremock.integrations:wiremock-spring-boot'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

spotless {
	java {
		googleJavaFormat()
		importOrder()
		removeUnusedImports()
		forbidWildcardImports()
	}
}

jacoco {
	// Pin version to keep builds reproducible
	toolVersion = '0.8.12'
}

checkstyle {
	// Formatting and import layout are handled by Spotless (google-java-format).
	// Checkstyle is focused on structural and documentation rules.
	toolVersion = '10.18.0'
	configFile = file('config/checkstyle/checkstyle.xml')
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy tasks.named('jacocoTestReport')
}

tasks.named('jacocoTestReport') {
	dependsOn tasks.named('test')
	reports {
		xml.required = true
		csv.required = false
		html.required = true
	}
}
